tests/sksl/errors/InvalidCapsUsage.glsl
### Compilation failed:

error: 6: invalid expression
    x += 1, sk_Caps;
            ^^^^^^^
1 error
